--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    </div>
 </div>
 <div class="cofevid">
-    <video class="cofevid_video" autoplay loop   >
+    <video class="cofevid_video" autoplay muted loop   >
 <source src="./videos/Pexels Videos 2890.mp4" type="video/mp4">
 
 </source>
